--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+          
+      - name: resharper
+        uses: glassechidna/resharper-action@master
+        with:
+        solution: HelloWorld.sln
 
       # Cache
       - uses: actions/cache@v2
