--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: resharper
         uses: glassechidna/resharper-action@master
         with:
-          solution: ${{GITHUB_WORKSPACE}}/Path-Find-and-Seek.sln
+          solution: ${{env.GITHUB_WORKSPACE}}/Path-Find-and-Seek.sln
 
       # Cache
       - uses: actions/cache@v2
