--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           lfs: true
           
       - name: Inspect
-        uses: nbadal/inspectcode-action
+        uses: nbadal/inspectcode-action@v1
         with:
           solution: './Path-Find-and-Seek.sln'
 
