--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
 
       # Test
       - name: Run tests
+        id: test
         uses: game-ci/unity-test-runner@v2
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -32,10 +33,10 @@ jobs:
         if: always()
         with:
           name: Test results
-          path: artifacts
+          path: ${{ steps.test.outputs.artifactsPath }}
           
       - uses: actions/upload-artifact@v2
         if: always()
         with:
           name: Coverage results
-          path: artifacts          path: ${{ steps.test.outputs.artifactsPath }}
+          path: ${{ steps.test.outputs.artifactsPath }}
