--- a/Assets/Tests/Runtime/RuntimeTest.asmdef
+++ b/Assets/Tests/Runtime/RuntimeTest.asmdef
@@ -6,7 +6,8 @@
         "GUID:0acc523941302664db1f4e527237feb3",
         "GUID:343deaaf83e0cee4ca978e7df0b80d21",
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
-        "GUID:8ada78c53c927f54ebd7d8022281d5ae"
+        "GUID:8ada78c53c927f54ebd7d8022281d5ae",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
